--- a/css/reset.css
+++ b/css/reset.css
@@ -28,6 +28,7 @@ img{
         background-color: transparent; /* 투명 */
         cursor: pointer;
         color: inherit;
+        font-family: inherit;
         
     }
     
